unpackaged/main/default/objects/zkmulti__Visibility_Suite__c/zkmulti__Visibility_Suite__c.object-meta.xml
<CustomObject>
    <label>Branded Tracking</label>
    <nameField>
        <label>Visibility Suite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branded Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>