unpackaged/main/default/objects/zkmulti__Visibility_Suite__c/fields/zkmulti__Default__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>