unpackaged/main/default/objects/zkmulti__Visibility_Suite__c/fields/zkmulti__Default_Upsell_Skyscraper__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Default_Upsell_Skyscraper__c</fullName>
    <label>Default Upsell Skyscraper</label>
    <type>Url</type>
</CustomField>