unpackaged/main/default/objects/zkmulti__Visibility_Suite__c/fields/zkmulti__Enable_Upsell_Skyscraper__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Enable_Upsell_Skyscraper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Upsell Skyscraper</label>
    <type>Checkbox</type>
</CustomField>