unpackaged/main/default/objects/zkmulti__Visibility_Suite__c/fields/zkmulti__Footer_Text__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Footer_Text__c</fullName>
    <label>Footer Text</label>
    <type>TextArea</type>
</CustomField>