unpackaged/main/default/objects/zkmulti__Visibility_Suite__c/fields/zkmulti__Javascript_Code__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Javascript_Code__c</fullName>
    <label>Javascript Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>