unpackaged/main/default/objects/zkmulti__Visibility_Suite__c/fields/zkmulti__Show_Order_Details__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Show_Order_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Order Details</label>
    <type>Checkbox</type>
</CustomField>