unpackaged/main/default/objects/zkmulti__Visibility_Suite__c/fields/zkmulti__Show_Travel_History__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Show_Travel_History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Travel History</label>
    <type>Checkbox</type>
</CustomField>